[package]
name = "dccscr-whitelists-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
git2 = "0.13"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"

[lib]
name = "whitelists"
path = "src/lib.rs"

[[bin]]
name = "wl"
path = "src/main.rs"
